section_desc_media_sm_md

--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,10 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="header__logo col-md-1">
-                    <a href="/"><img alt="logo"></a>
-                </div>
-                <nav class="col-md-7 menu">
+                <!-- <div class="header__logo col-1">
+                    <a href="/"><img src="icons/1-34.jpg" alt="logo"></a>
+                </div> -->
+                <nav class="col-md-8 menu">
                         <a href="/" class="menu__link">Главная </a>
                         <a href="/" class="menu__link"> Обо мне </a>
                         <a href="/" class="menu__link"> виды консультаций</a>
@@ -23,16 +23,87 @@
                         <a href="/" class="menu__link"> Контакты </a>
                         <a href="/" class="menu__link">Записаться на прием</a>	
                 </nav>
-                <div class="col-md-2 header__callback">
-                    <div class="header__callback__desc"> Есть вопросы ? </div>
+                <div class="offset-6 col-3 offset-md-0 col-md-2 header__callback">
+                    <div class="header__callback__desc"> Есть вопросы?</div>
                     <a href="tel:+79196353530" class="header__callback__link"> +7 (919) 635-35-30 </a>
                 </div>
-                <div class="col-md-2 header__btn">
+                <div class="col-3 col-md-2 header__btn">
                     <button class="btn btn-callback"> оставить заявку </button>                        
-                </div>       
+                </div>
+            </div>
+            <div class="header__title"><h1>психолог галиева казань</h1></div>
+            <article class="header__subtitle"><h2>"помогаю стать счастливой мамой!"</h2></article>
+        </div>
+        <div class="header__burger header__burger_active">
+            <span class="burger"></span>
+            <span class="burger"></span>
+            <span class="burger"></span>
+        </div>
+        <img src="img/bg_header.jpg" class="bg_header" alt="bg_header" loading="lazy">
+    </header>
+    <section class="description">
+        <div class="container">
+            <div class="description__subtitle"><h2> Особенности моего подхода </h2></div>
+            <div class="row">
+                <div class="description__block col-12 col-md-6">
+                    <div class="description__block__icon">#добавить иконку</div>
+                    <div class="description__block__desc">
+                        <div class="block__title"><h3> С чего начинается Человек?</h3></div>
+                        <div class="block__desc">Начну сразу с главного, своей большой профессиональной боли: НЛП, тетахилинг, холотропное дыхание - это г#вно из ж#пы, а не психология! Эти практики к научной психологии имеют такое же отношение как гомеопатия к медицине. Ни в одном ВУЗе страны перечисленные практики не преподают, кандидатские и докторские работы по ним не защищаются...</div>
+                    </div>
+                </div>
+                <div class="description__block col-12 col-md-6">
+                    <div class="description__block__icon">#добавить иконку</div>
+                    <div class="description__block__desc">
+                        <div class="block__title"><h3> С чего начинается Человек?</h3></div>
+                        <div class="block__desc">Начну сразу с главного, своей большой профессиональной боли: НЛП, тетахилинг, холотропное дыхание - это г#вно из ж#пы, а не психология! Эти практики к научной психологии имеют такое же отношение как гомеопатия к медицине. Ни в одном ВУЗе страны перечисленные практики не преподают, кандидатские и докторские работы по ним не защищаются...</div>
+                    </div>
+                </div>
+                <div class="description__block col-12 col-md-6">
+                    <div class="description__block__icon">#добавить иконку</div>
+                    <div class="description__block__desc">
+                        <div class="block__title"><h3> С чего начинается Человек?</h3></div>
+                        <div class="block__desc">Начну сразу с главного, своей большой профессиональной боли: НЛП, тетахилинг, холотропное дыхание - это г#вно из ж#пы, а не психология! Эти практики к научной психологии имеют такое же отношение как гомеопатия к медицине. Ни в одном ВУЗе страны перечисленные практики не преподают, кандидатские и докторские работы по ним не защищаются...</div>
+                    </div>
+                </div>
+                <div class="description__block col-12 col-md-6">
+                    <div class="description__block__icon">#добавить иконку</div>
+                    <div class="description__block__desc">
+                        <div class="block__title"><h3> С чего начинается Человек?</h3></div>
+                        <div class="block__desc">Начну сразу с главного, своей большой профессиональной боли: НЛП, тетахилинг, холотропное дыхание - это г#вно из ж#пы, а не психология! Эти практики к научной психологии имеют такое же отношение как гомеопатия к медицине. Ни в одном ВУЗе страны перечисленные практики не преподают, кандидатские и докторские работы по ним не защищаются...</div>
+                    </div>
+                </div>
+                <div class="description__block col-12 col-md-6">
+                    <div class="description__block__icon">#добавить иконку</div>
+                    <div class="description__block__desc">
+                        <div class="block__title"><h3> С чего начинается Человек?</h3></div>
+                        <div class="block__desc">Начну сразу с главного, своей большой профессиональной боли: НЛП, тетахилинг, холотропное дыхание - это г#вно из ж#пы, а не психология! Эти практики к научной психологии имеют такое же отношение как гомеопатия к медицине. Ни в одном ВУЗе страны перечисленные практики не преподают, кандидатские и докторские работы по ним не защищаются...</div>
+                    </div>
+                </div>
+                <div class="description__block col-12 col-md-6">
+                    <div class="description__block__icon"> #добавить иконку</div>
+                    <div class="description__block__desc">
+                        <div class="block__title"><h3> С чего начинается Человек?</h3></div>
+                        <div class="block__desc">Начну сразу с главного, своей большой профессиональной боли: НЛП, тетахилинг, холотропное дыхание - это г#вно из ж#пы, а не психология! Эти практики к научной психологии имеют такое же отношение как гомеопатия к медицине. Ни в одном ВУЗе страны перечисленные практики не преподают, кандидатские и докторские работы по ним не защищаются...</div>
+                    </div>
+                </div>
+                <div class="description__block col-12 col-md-6">
+                    <div class="description__block__icon"> #добавить иконку </div>
+                    <div class="description__block__desc">
+                        <div class="block__title"><h3> С чего начинается Человек?</h3></div>
+                        <div class="block__desc">Начну сразу с главного, своей большой профессиональной боли: НЛП, тетахилинг, холотропное дыхание - это г#вно из ж#пы, а не психология! Эти практики к научной психологии имеют такое же отношение как гомеопатия к медицине. Ни в одном ВУЗе страны перечисленные практики не преподают, кандидатские и докторские работы по ним не защищаются...</div>
+                    </div>
+                </div>
+                <div class="description__block col-12 col-md-6">
+                    <div class="description__block__icon">#добавить иконку</div>
+                    <div class="description__block__desc">
+                        <div class="block__title"><h3> С чего начинается Человек?</h3></div>
+                        <div class="block__desc">Начну сразу с главного, своей большой профессиональной боли: НЛП, тетахилинг, холотропное дыхание - это г#вно из ж#пы, а не психология! Эти практики к научной психологии имеют такое же отношение как гомеопатия к медицине. Ни в одном ВУЗе страны перечисленные практики не преподают, кандидатские и докторские работы по ним не защищаются...</div>
+                    </div>
+                </div>
             </div>
         </div>
-    </header>
+    </section>
 
 
 
