3sections_full_adaptive

--- a/src/index.html
+++ b/src/index.html
@@ -154,9 +154,18 @@
 	<script src="JS/jquery.maskedinput.min.js"></script>
 	<script src="JS/script.js"></script>
     
-    <!-- <span class="icon-mail social"></span>
+    <!-- <span class="icon-mail social"></span> 
     <span class="icon-whatsapp social"></span>
     <span class="icon-instagram social"></span>
-    <span class="icon-vk social"></span> -->
+    <span class="icon-vk social"></span>
+    <span class="icon-key features"></span>
+    <span class="icon-search features"></span>
+    <span class="icon-settings features"></span>
+    <span class="icon-study features"></span>
+    <span class="icon-trophy features"></span>
+    <span class="icon-rocket features"></span>
+    <span class="icon-arrow-right2 features"></span>
+    <span class="icon-arrow-left2 features"></span> -->
+
 </body>
 </html>
