--- a/src/index.html
+++ b/src/index.html
@@ -47,56 +47,44 @@
             <div class="description__subtitle"><h2> Особенности моего подхода </h2></div>
             <div class="row">
                 <div class="description__block col-12 col-md-6">
-                    <div class="description__block__icon">#добавить иконку</div>
+                    <div class="description__block__icon"><span class="icon-key features"></span></div>
                     <div class="description__block__desc">
                         <div class="block__title"><h3> С чего начинается Человек?</h3></div>
                         <div class="block__desc">Начну сразу с главного, своей большой профессиональной боли: НЛП, тетахилинг, холотропное дыхание - это г#вно из ж#пы, а не психология! Эти практики к научной психологии имеют такое же отношение как гомеопатия к медицине. Ни в одном ВУЗе страны перечисленные практики не преподают, кандидатские и докторские работы по ним не защищаются...</div>
                     </div>
                 </div>
                 <div class="description__block col-12 col-md-6">
-                    <div class="description__block__icon">#добавить иконку</div>
+                    <div class="description__block__icon"><span class="icon-search features"></span></div>
                     <div class="description__block__desc">
                         <div class="block__title"><h3> С чего начинается Человек?</h3></div>
                         <div class="block__desc">Начну сразу с главного, своей большой профессиональной боли: НЛП, тетахилинг, холотропное дыхание - это г#вно из ж#пы, а не психология! Эти практики к научной психологии имеют такое же отношение как гомеопатия к медицине. Ни в одном ВУЗе страны перечисленные практики не преподают, кандидатские и докторские работы по ним не защищаются...</div>
                     </div>
                 </div>
                 <div class="description__block col-12 col-md-6">
-                    <div class="description__block__icon">#добавить иконку</div>
+                    <div class="description__block__icon"><span class="icon-study features"></span></div>
+                    <div class="description__block__desc">
+                        <div class="block__title"><h3> С чего начинается Человек?</h3></div>
+                        <div class="block__desc">Начну сразу с главного, своей большой профессиональной боли: НЛП, тетахилинг, холотропное дыхание - это г#вно из ж#пы, а не психология! Эти практики к научной психологии имеют такое же отношение как гомеопатия к медицине. Ни в одном ВУЗе страны перечисленные практики не преподают, кандидатские и докторские работы по ним не защищаются...</div>
+                    </div>
+                </div>
+                
+                <div class="description__block col-12 col-md-6">
+                    <div class="description__block__icon"><span class="icon-study features"></span></div>
+                    <div class="description__block__desc">
+                        <div class="block__title"><h3> С чего начинается Человек?</h3></div>
+                        <div class="block__desc">Начну сразу с главного, своей большой профессиональной боли: НЛП, тетахилинг, холотропное дыхание - это г#вно из ж#пы, а не психология! Эти практики к научной психологии имеют такое же отношение как гомеопатия к медицине. Ни в одном ВУЗе страны перечисленные практики не преподают, кандидатские и докторские работы по ним не защищаются...</div>
+                    </div>
+                </div>
+                
+                <div class="description__block col-12 col-md-6">
+                    <div class="description__block__icon"> <span class="icon-rocket features"></span> </div>
                     <div class="description__block__desc">
                         <div class="block__title"><h3> С чего начинается Человек?</h3></div>
                         <div class="block__desc">Начну сразу с главного, своей большой профессиональной боли: НЛП, тетахилинг, холотропное дыхание - это г#вно из ж#пы, а не психология! Эти практики к научной психологии имеют такое же отношение как гомеопатия к медицине. Ни в одном ВУЗе страны перечисленные практики не преподают, кандидатские и докторские работы по ним не защищаются...</div>
                     </div>
                 </div>
                 <div class="description__block col-12 col-md-6">
-                    <div class="description__block__icon">#добавить иконку</div>
-                    <div class="description__block__desc">
-                        <div class="block__title"><h3> С чего начинается Человек?</h3></div>
-                        <div class="block__desc">Начну сразу с главного, своей большой профессиональной боли: НЛП, тетахилинг, холотропное дыхание - это г#вно из ж#пы, а не психология! Эти практики к научной психологии имеют такое же отношение как гомеопатия к медицине. Ни в одном ВУЗе страны перечисленные практики не преподают, кандидатские и докторские работы по ним не защищаются...</div>
-                    </div>
-                </div>
-                <div class="description__block col-12 col-md-6">
-                    <div class="description__block__icon">#добавить иконку</div>
-                    <div class="description__block__desc">
-                        <div class="block__title"><h3> С чего начинается Человек?</h3></div>
-                        <div class="block__desc">Начну сразу с главного, своей большой профессиональной боли: НЛП, тетахилинг, холотропное дыхание - это г#вно из ж#пы, а не психология! Эти практики к научной психологии имеют такое же отношение как гомеопатия к медицине. Ни в одном ВУЗе страны перечисленные практики не преподают, кандидатские и докторские работы по ним не защищаются...</div>
-                    </div>
-                </div>
-                <div class="description__block col-12 col-md-6">
-                    <div class="description__block__icon"> #добавить иконку</div>
-                    <div class="description__block__desc">
-                        <div class="block__title"><h3> С чего начинается Человек?</h3></div>
-                        <div class="block__desc">Начну сразу с главного, своей большой профессиональной боли: НЛП, тетахилинг, холотропное дыхание - это г#вно из ж#пы, а не психология! Эти практики к научной психологии имеют такое же отношение как гомеопатия к медицине. Ни в одном ВУЗе страны перечисленные практики не преподают, кандидатские и докторские работы по ним не защищаются...</div>
-                    </div>
-                </div>
-                <div class="description__block col-12 col-md-6">
-                    <div class="description__block__icon"> #добавить иконку </div>
-                    <div class="description__block__desc">
-                        <div class="block__title"><h3> С чего начинается Человек?</h3></div>
-                        <div class="block__desc">Начну сразу с главного, своей большой профессиональной боли: НЛП, тетахилинг, холотропное дыхание - это г#вно из ж#пы, а не психология! Эти практики к научной психологии имеют такое же отношение как гомеопатия к медицине. Ни в одном ВУЗе страны перечисленные практики не преподают, кандидатские и докторские работы по ним не защищаются...</div>
-                    </div>
-                </div>
-                <div class="description__block col-12 col-md-6">
-                    <div class="description__block__icon">#добавить иконку</div>
+                    <div class="description__block__icon"><span class="icon-trophy features"></span></div>
                     <div class="description__block__desc">
                         <div class="block__title"><h3> С чего начинается Человек?</h3></div>
                         <div class="block__desc">Начну сразу с главного, своей большой профессиональной боли: НЛП, тетахилинг, холотропное дыхание - это г#вно из ж#пы, а не психология! Эти практики к научной психологии имеют такое же отношение как гомеопатия к медицине. Ни в одном ВУЗе страны перечисленные практики не преподают, кандидатские и докторские работы по ним не защищаются...</div>
