--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
                         <a href="/" class="menu__link"> Контакты </a>
                         <a href="/" class="menu__link">Записаться на прием</a>	
                 </nav>
-                <div class="offset-6 col-3 offset-lg-0 col-lg-2 header__callback">
+                <div class="offset-2 col-7 offset-lg-0 col-lg-2 header__callback">
                     <div class="header__callback__desc"> Есть вопросы?</div>
                     <a href="tel:+79196353530" class="header__callback__link"> +7 (919) 635-35-30 </a>
                 </div>
@@ -97,6 +97,8 @@
     <div class="slider">
 		<div class="container">
             <div class="row">
+                <div class="slider__title"><h3> Мысли и рассуждения!</h3>
+                </div>  
                 <div class="col-12 slider__content__wrapper">
                     <div class="slider__content__block"> 
                         <img src="img/1.jpg" alt="slide_1" loading="lazy" class="slider__content__pict">
