menu_modal_js_actions

--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,12 @@
         <div class="container">
             <div class="row">
                 <nav class="col-lg-8 menu">
-                        <a href="/" class="menu__link">Главная </a>
+                        <a class="menu__link"> Главная </a>
                         <a href="/" class="menu__link"> Обо мне </a>
                         <a href="/" class="menu__link"> виды консультаций</a>
                         <a href="/" class="menu__link"> Особенности </a>
                         <a href="/" class="menu__link"> Контакты </a>
-                        <a href="/" class="menu__link">Записаться на прием</a>	
+                        <a href="/" class="menu__link"> Записаться на прием</a>	
                 </nav>
                 <div class="offset-2 col-7 offset-lg-0 col-lg-2 header__callback">
                     <div class="header__callback__desc"> Есть вопросы?</div>
