meta_cash_developing

--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Y_VAS_BUDET_REBENOK </title>
+    <title> Перинатальный психолог </title>
+    <meta name="Description" content="..."/>
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/fontsicon.css">
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/style.min.css?1">
+    <!-- добавляю к стайлу символы ?1 для оптимальной чистки кэша -->
     <link rel="stylesheet" href="css/slick.css">
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
 </head>
@@ -15,18 +17,18 @@
         <div class="container">
             <div class="row">
                 <nav class="col-lg-8 menu">
-                        <a class="menu__link"> Главная </a>
+                        <a href="/"class="menu__link"> Главная </a>
                         <a href="/" class="menu__link"> Обо мне </a>
                         <a href="/" class="menu__link"> виды консультаций</a>
                         <a href="/" class="menu__link"> Особенности </a>
                         <a href="/" class="menu__link"> Контакты </a>
                         <a href="/" class="menu__link"> Записаться на прием</a>	
                 </nav>
-                <div class="offset-2 col-7 offset-lg-0 col-lg-2 header__callback">
+                <div class="offset-0 col-6 col-sm-7 offset-lg-0 col-lg-2 header__callback">
                     <div class="header__callback__desc"> Есть вопросы?</div>
                     <a href="tel:+79196353530" class="header__callback__link"> +7 (919) 635-35-30 </a>
                 </div>
-                <div class="col-3 col-lg-2 header__btn">
+                <div class="col-4 col-lg-2 header__btn">
                     <button class="btn btn-callback"> оставить заявку </button>                        
                 </div>
             </div>
